--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet" media="print">
+    <link href="css/portrait.css" rel="stylesheet" media="screen and (max-width: 480px)">
     <script src="http://www.google-analytics.com/analytics.js" async></script>
     <script async src="js/perfmatters.js"></script>
   </head>
